Step 3 - On device you will see there is an issue with the keyboard covering the message input box not working well.

--- a/app/pages/form/form.scss
+++ b/app/pages/form/form.scss
@@ -57,6 +57,11 @@ ion-card ion-list .item .item-inner input {
     margin-left: 0px;
 }
 
+ion-footer .button {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 #map_canvas {
     height: 300px;
     width: 90%;
