--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -40,3 +40,10 @@
 .pac-item .pac-icon {
     margin-top: 16px;
 }
+
+.chatbox {
+    width: 100%;
+    border: none;
+    background: none;
+    padding: 0px 10px;
+}
